--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ plugins {
 }
 
 group 'com.lucendar.common'
-version '1.0.6'
+version '1.1.0-SNAPSHOT'
 
 compileJava.options.encoding = 'UTF-8'
 compileScala.options.encoding = 'UTF-8'
 
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = '17'
+targetCompatibility = '17'
 
 
 
@@ -23,27 +23,29 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.10.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     // https://mvnrepository.com/artifact/org.scalatest/scalatest
     testImplementation 'org.scalatest:scalatest_2.13:3.2.13'
 
 
-    implementation('org.scala-lang:scala-library:2.13.10')
-    implementation('org.scala-lang:scala-reflect:2.13.10')
+    implementation('org.scala-lang:scala-library:2.13.12')
+    implementation('org.scala-lang:scala-reflect:2.13.12')
 
-    implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.4')
+    implementation('com.typesafe.scala-logging:scala-logging_2.13:3.9.5')
 
-    implementation('org.springframework:spring-jdbc:5.3.27')
-    implementation('org.springframework:spring-web:5.3.27')
+    implementation('org.springframework:spring-jdbc:6.0.6')
+    implementation('org.springframework:spring-web:6.0.6')
 
     api 'com.zaxxer:HikariCP:5.0.1'
     // https://mvnrepository.com/artifact/com.github.jsqlparser/jsqlparser
     implementation group: 'com.github.jsqlparser', name: 'jsqlparser', version: '4.2'
 
 
-    implementation('info.gratour.common:gratour-common:3.2.8')
-    implementation('com.lucendar.common:server-common:1.0.6')
+//    implementation('info.gratour.common:gratour-common:3.2.8')
+    implementation('com.lucendar.common:lucendar-common:1.0.0-SNAPSHOT')
+    implementation('com.lucendar.common:server-common:2.0.0-SNAPSHOT')
 }
 
 test {
@@ -82,14 +84,3 @@ publishing {
 
     }
 }
-
-//nexusPublishing {
-//    repositories {
-//        sonatype {
-//            nexusUrl.set(uri("https://wx.gratour.info:7999/repository/maven-releases/"))
-//            snapshotRepositoryUrl.set(uri("https://wx.gratour.info:7999/repository/maven-snapshots/"))
-//            username = "${ossUser}"
-//            password = "${ossPwd}"
-//        }
-//    }
-//}
