--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group 'com.lucendar'
-version '2.1.0-SNAPSHOT'
+version '2.1.0'
 
 compileJava.options.encoding = 'UTF-8'
 compileScala.options.encoding = 'UTF-8'
@@ -39,8 +39,8 @@ dependencies {
     implementation group: 'com.github.jsqlparser', name: 'jsqlparser', version: '4.2'
 
 
-    implementation('com.lucendar:lucendar-common:2.0.0')
-    implementation('com.lucendar:server-common:3.0.0')
+    implementation('com.lucendar:lucendar-common:2.2.0')
+    implementation('com.lucendar:server-common:3.1.0')
 }
 
 test {
